<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="title_activity_login">Gescom Login</string>
    <string name="app_name">GESCOM(1.11)</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Define Spanlength</string>
    <string name="Delete_photos">Delete Works</string>
    <string name="login">Login</string>
    <string name="loginTitle">Gulbarga Electricity Supply Company</string>
    <string name="username">Username </string>
    <string name="password">Password </string>
    <string name="loginSubtitle">Login to update work status</string>
    <string name="loginButton">Login</string>
    <string name="loginCancel">Cancel</string>
    <string name="title_activity_user">Gescom Menu</string>
    <string name="save">Field Survey</string>
    <string name="isDistance">Show Distance</string>
    <string name="TotalDistance">Total Distance:</string>
    <string name="create">Create Estimation</string>
    <string name="edit">Edit Estimation</string>
    <string name="measure">Measurement</string>
    <string name="task">Task Process</string>
    <string name="update">Itemwise Update</string>
    <string name="capture">Capture Inventory</string>
    <string name="loction">Location</string>
    <string name="bend">Is Bend?</string>
    <string name="savecoordiants">Save Co-Ordiants</string>
    <string name="Selectproject">Select Project</string>
    <string name="Selectitem">Select item</string>
    <string name="title_activity_savecoordinates">Survey</string>
    <string name="photo_caption">Caption</string>
    <string name="btnCapture_Image">Capture Image</string>
    <string name="btnMenu">Menu</string>
    <string name="btnUpdate">Update</string>
    <string name="btnSend">SendToServer</string>
    <string name="etDate">Date</string>
    <string name="zeal">GESCOM</string>
    <string name="btnCancel">Back</string>
    <string name="sync">Synchronize</string>
    <string name="title_activity_usermenu">Gescom Menu</string>
    <string name="savetoLocal">Save</string>
    <string name="title_activity_create_estimation">Create Estimation</string>
    <string name="title_Activity_Estimation_Details">Edit Estimation</string>
    <string name="title_Activity_Edit_Estimation">Edit Estimation</string>
    <string name="tvQuantity">Quantity</string>
    <string name="tvCostPerItem">Cost/Item</string>
    <string name="tvAmount">Amount</string>
    <string name="tvEstimatedQty">Estimated Qty</string>
    <string name="tvReaminingQty">Remaining Qty</string>
    <string name="tvMeasurement">Measurement</string>
    <string name="btnSign">Signature</string>
    <string name="btnSendtoServer">SendToServer</string>
    <string name="tvAsOnToday">As On Today Date    </string>
    <string name="title_Activity_ItemwiseUpdate">Itemwise Update</string>
    <string name="title_Activity_DigitalSignature">Digital Signature</string>
    <string name="tvSign">Please Sign below </string>
    <string name="btnClear">Clear</string>
    <string name="tvYourName">Your Name</string>
    <string name="tvQuantityOver">Quantity Over  </string>
    <string name="title_activity_measurement">Measurement</string>
    <string name="title_activity_editmeasurement">Edit Measurement</string>
    <string name="title_activity_multiple_estimation">Multiple Estimation</string>
    <string name="title_activity_componet_details">ComponetDetails</string>
    <string name="title_activity_capture_coordinates">CaptureCoordinates</string>
    <string name="title_activity_camera">Camera Activity</string>
    <string name="title_activity_MeasurementActivity">Measurement Details</string>
    <string name="title_activity_EditMeasurement">Edit Measurement</string>
    <string name="title_activity_matreial_details">MatreialDetails</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="menu_show_map">Show Map</string>
    <string name="title_activity_delete">DeleteActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_delete_photos">DeletePhotosActivity</string>
</resources>