<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".UsermenuActivity" >
<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#3399cc"
    android:orientation="vertical" >

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent" 
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:stretchColumns="0,1">
  
        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button            
                android:id="@+id/sync"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/buttonstyle"
                android:drawableTop="@drawable/sync"
                android:gravity="center"
                android:lines="2"
                android:textSize="15sp"
                android:paddingTop="15.0dip"
                android:text="@string/sync"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:typeface="serif" />

            <Button
                android:id="@+id/savecoordinates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/buttonstyle"
                android:drawableTop="@drawable/globe"
                android:gravity="center"
                android:lines="2"
                android:textSize="15sp"
                android:paddingTop="15.0dip"
                android:text="@string/save"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:typeface="serif" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/createestimation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/buttonstyle"
                android:drawableTop="@drawable/task"
                android:gravity="center"
                android:lines="2"
                android:textSize="15sp"
                android:paddingTop="15.0dip"
                android:text="@string/create"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:typeface="serif" />

            <Button
                android:id="@+id/editestimation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/buttonstyle"
                android:drawableTop="@drawable/work"
                android:gravity="center"
                android:lines="2"
                android:textSize="15sp"
                android:paddingTop="15.0dip"
                android:text="@string/edit"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:typeface="serif" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/task"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/buttonstyle"
                android:drawableTop="@drawable/scheduledtasks"
                android:gravity="center"
                android:lines="2"
                android:textSize="15sp"
                android:paddingTop="15.0dip"
                android:text="@string/task"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:typeface="serif" />

            <Button
                android:id="@+id/update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/buttonstyle"
                android:drawableTop="@drawable/update"
                android:gravity="center"
                android:lines="2"
                android:textSize="15sp"
                android:paddingTop="15.0dip"
                android:text="@string/update"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:typeface="serif" />
            
        </TableRow>
        
         <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

             <Button
                 android:id="@+id/measurement"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/buttonstyle"
                 android:drawableTop="@drawable/ruler1"
                 android:gravity="center"
                 android:textSize="15sp"
                 android:lines="2"
                 android:paddingTop="15.0dip"
                 android:text="@string/measure"
                 android:textColor="#FFFFFF"
                 android:textStyle="bold"
                 android:typeface="serif" />
          
               <Button
                android:id="@+id/image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:background="@drawable/buttonstyle"
                android:drawableTop="@drawable/camera72"
                android:gravity="center"
                android:lines="2"
                android:textSize="15sp"
                android:paddingTop="15.0dip"
                android:text="@string/capture"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:typeface="serif" />
             
        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/CategoryChange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/buttonstyle"
                android:drawableTop="@drawable/globe"
                android:gravity="center"
                android:lines="2"
                android:textSize="15sp"
                android:paddingTop="15.0dip"
                android:text="Change Category"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:typeface="serif" />

             <Button
                android:id="@+id/surveySketch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:background="@drawable/buttonstyle"
                android:drawableTop="@drawable/globe"
                android:gravity="center"
                android:lines="2"
                android:textSize="15sp"
                android:paddingTop="15.0dip"
                android:text="Surveyed Sketch"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:typeface="serif" />
        </TableRow>
    </TableLayout>

</LinearLayout>

</ScrollView>