<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#660066"
    android:orientation="vertical" >

    <Spinner
        android:id="@+id/estProjectSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/TotalofEstimation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/estProjectSpinner"
        android:paddingLeft="50dip"
        android:text=""
        
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ffffff" />

    <!--
         <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/buttonTable"
        android:layout_below="@id/estProjectSpinner" />
    -->

   <ExpandableListView
        android:id="@+id/lvExp"
        android:cacheColorHint="#00000000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@layout/rounded"
        android:layout_above="@+id/buttonTable"
        android:layout_below="@id/TotalofEstimation" />

    <TableLayout
        android:id="@+id/buttonTable"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:stretchColumns="*" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btnSignature"
                android:layout_height="50dp"
                android:layout_margin="1dip"
                android:background="@layout/rounded"
                android:text="@string/btnSign"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btnSendToServer"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_margin="1dip"
                android:background="@layout/rounded"
                android:text="@string/btnSendtoServer"
                android:textColor="@color/white" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/savetoLocal"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_margin="1dip"
                android:background="@layout/rounded"
                android:text="Save This Estimation"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_margin="1dip"
                android:background="@layout/rounded"
                android:text="@string/btnCancel"
                android:textColor="@color/white" />
        </TableRow>
    </TableLayout>
 
</RelativeLayout>